--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,8 @@ jobs:
       
       - store_artifacts:
           path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
+      - run:
+          name: Deploy to S3 if tests pass and branch is Master
+          command: aws s3 sync target/demo-java-spring-0.0.1-SNAPSHOT.jar s3://devopsteam --delete
+
+
