--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,11 @@ jobs:
       - run: mvn package
       - run:
           name: install-aws
-          command: pip install awscli --upgrade --user
+          command: apt-get -y -qq update
+            apt-get -y -qq install python3.4-dev
+            curl -O https://bootstrap.pypa.io/get-pip.py
+            python3.4 get-pip.py --user
+            pip install awscli --upgrade --user
       - store_test_results:
           path: target/surefire-reports      
       - store_artifacts:
