--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,7 @@ jobs:
       - run: mvn package
       - run:
           name: install-aws
-          command: apt-get -y -qq update
-            apt-get -y -qq install python3.4-dev
-            python3.4 get-pip.py --user
-            pip install awscli --upgrade --user
+          command: pip install awscli --upgrade --user
       - store_test_results:
           path: target/surefire-reports      
       - store_artifacts:
